# easylambda

./: .gitignore  README.md  pyproject.toml
easylambda/: aws.py  body.py  dependency.py  depends.py  header.py  main.py  paramtype.py  path.py  query.py
examples/: body.py  dict_response.py  param_header.py  query.py  response_custom.py  test_method_router.py  test_param_body.py  test_param_header.py  test_param_path.py  test_param_query.py  test_response_basemodel.py  test_response_custom.py  test_response_dict.py  test_response_none.py  test_whatsapp_message.py  test_whatsapp_verification.py
