[tool.poetry]
name = "easylambda"
version = "0.1.1"
description = ""
authors = ["Leandro Lima <leandro@lls-software.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
